@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/sparc64-archscript.sh,v 1.1 2004/03/04 23:29:45 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/sparc64-archscript.sh,v 1.2 2004/03/23 07:20:34 zhen Exp $
 
 case $1 in
 	kernel)
@@ -82,7 +82,6 @@ case $1 in
 	iso)
 		# this is for the livecd-final target, and calls the proper
 		# command to build the iso file
-		mkisofs -J -R -l -z -o ${clst_iso_path} -G /boot/isofs.b -B ... \
-		    $clst_cdroot_path
+		mkisofs -J -R -l -z -o ${2} -G /boot/isofs.b -B ... ${clst_cdroot_path}
 	;;
 esac
